--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="21" />
     
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -29,6 +31,7 @@
         <activity android:name="com.xyg.mydemo.ui.Demo1"></activity>
        	<activity android:name="com.xyg.mydemo.ui.Demo2"></activity>
        	<activity android:name="com.xyg.mydemo.ui.Demo3"></activity>
+       	<activity android:name="com.xyg.mydemo.ui.Demo4"></activity>
     </application>
 
 </manifest>
