--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="lib" path="F:/安卓 jar包/GifView.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/GifView.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
