--- a/baidumaplibrary/build.gradle
+++ b/baidumaplibrary/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 20
     buildToolsVersion "23.0.0"
 
     defaultConfig {
@@ -25,5 +25,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':baselibrary')
 }
