--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-10
 android.library.reference.1=../appcompat_v7
 manifestmerger.enabled=true
+proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
