--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -174,6 +174,10 @@
             android:name=".pullzoomdemo.recyclerview.PullToZoomRecyclerActivity"
             android:label="@string/title_activity_pull_to_zoom_recycler" >
         </activity>
+        <activity
+            android:name=".ui.LifeCycleActivity"
+            android:label="@string/title_activity_life_cycle" >
+        </activity>
     </application>
 
 </manifest>
