20150917提交修改，添加全局错误处理类

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -186,6 +186,14 @@
             android:name=".ui.ToastDemoActivity"
             android:label="@string/title_activity_toast_demo" >
         </activity>
+        <activity
+            android:name=".jpush.JPushBaseActivity"
+            android:label="@string/title_activity_jpush_base" >
+        </activity>
+        <activity
+            android:name=".ui.ExceptionActivity"
+            android:label="@string/title_activity_exception" >
+        </activity>
     </application>
 
 </manifest>
